# FP_AI_Face-Comparison

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
