[project]
name = "fp-ai-face-comparison"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepface>=0.0.79",
    "numpy>=1.20.0",
    "opencv-python>=4.11.0.86",
    "pillow>=9.0.0",
    "streamlit>=1.25.0",
    "tensorflow[and-cuda]>=2.19.0",
    "tf-keras>=2.19.0",
]
